# zenFi

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  chat.py  cookies.txt  file.csv  finance.py  injestion.py  nse.py  pyproject.toml  requirements.txt  yt.py
backend/alembic/: env.py
backend/alembic/versions/: 20c7be06c503_updated_portfolio.py  2d763b1b5c44_updated_chat_session_to_add_summary.py  306d0da134e3_updated_portfolio.py  4ef3f44b5db1_initial.py  57a139214fa0_minor_change.py  7abfc703ddfb_some_stock_changes.py  82602e158cfa_added_refresh_tokens.py  8844290170b1_added_knowledge_base.py  94a47b9f1473_updated_summary_to_optional.py  b64065916bc9_some_stock_changes.py  c22ac7dcf218_added_bank_account_link_and_transactions.py  f4f735c4fd8b_add_is_default_column_to_portfolios.py  f8c8d0529745_initial_migration.py
backend/app/api/: api_functions.py  api_models.py  auth.py  bank_account.py  chat.py  dashboard.py  knowledge_base.py  main.py  news.py  portfolio.py  routes.py  stocks.py
backend/app/chat_provider/: auth.py
backend/app/chat_provider/account_aggreator/: account_data.py
backend/app/chat_provider/extra_functions/: big_query.py  charts.py  exchange.py
backend/app/chat_provider/models/: chat_models.py  deepsearch_models.py  news_models.py
backend/app/chat_provider/service/: analysis_pipeline.py  chat_service.py  chat_service_prompt.py  deepsearch_configuration.py  deepsearch_service.py  deepsearch_service_prompt.py  deepsearch_utils.py  news_service.py  news_service_prompt.py  portfolio_summary_service.py  schemas.py  utils.py
backend/app/chat_provider/service/knowledge_base/: knowledege_base.py  knowledge_base_pdf_helpers.py  knowledge_base_vector.py
backend/app/chat_provider/tools/: basic_tools.py  chat_tools.py  finance_tools.py  knowledge_base.py  news_tools.py  rag_tools.py  stock_market_tools.py  web_search_tools.py
backend/app/chat_provider/tools/nse/: nse_tools.py
backend/app/chat_provider/utils/: search_utils.py
backend/app/config/: config.py
backend/knowledge_base/: knowledgebase.py
docs/: graph.py  process_flow.py  zenfi_ai_architecture  zenfi_ai_process_flow  zenfi_ai_process_flow_condensed  (+1 more)
frontend/: Dockerfile  (+5 more)
(+77 files in other folders)
