[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "duckduckgo-search>=8.0.2",
    "faker>=37.3.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.2",
    "jwt>=1.3.1",
    "langchain-chroma>=0.2.3",
    "langchain-experimental>=0.3.4",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.5",
    "langgraph-checkpoint-postgres>=2.0.21",
    "matplotlib>=3.10.3",
    "mftool>=2.9",
    "nselib>=1.9",
    "pandas-market-calendars>=5.1.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg[binary,pool]>=3.2.9",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "redis>=6.1.0",
    "selenium>=4.32.0",
    "sqlalchemy>=2.0.41",
    "yfinance>=0.2.61",
]
